SmartCam with controller and last
